card-service/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: card-service
spec:
  hosts:
    - "card.sm.apps.ocp.example.com"
  gateways:
    - card
  http:
    - rewrite:
        authority: card-service.servicemesh-with-serverless.svc.cluster.local
      route:
        - destination:
            host: card-service.servicemesh-with-serverless.svc.cluster.local
            port:
              number: 80
